<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Imajadio</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="openCamera">Open Camera</string>

    <string name="exportAudio">Export Audio</string>
    <string name="saveImage">Save Image</string>
    <string name="newImage">New Image</string>
    <string name="loadImage">Load Image</string>

</resources>
